update flow model _deserialize with exception handling to catch number of failed examples

--- a/example/model/self_instruct_html_source.ipynb
+++ b/example/model/self_instruct_html_source.ipynb
@@ -110,17 +110,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "data = [{\n",
-    "    \"instruction\": \"\"\"Generate one question and its corresponding answer based on the context. Following the format of the examples below to include context, question, and answer in the response.\"\"\",\n",
+    "    \"instruction\": \"\"\"Generate one question and its corresponding answer based on the context. Following the format of the examples below to include the same context, question, and answer in the response.\"\"\",\n",
     "    \"examples\": [\n",
     "        {\n",
-    "            \"context\": \"\"\"The quick brown fox jumps over the lazy dog.\"\"\",\n",
-    "            \"question\": \"\"\"What is the color of the fox?\"\"\",\n",
-    "            \"answer\": \"\"\"brown.\"\"\"\n",
+    "            \"context\": \"\"\"In 1948, Claude E. Shannon published A Mathematical Theory of\\nCommunication (Shannon, 1948) establishing the theory of\\ninformation. In his article, Shannon introduced the concept of\\ninformation entropy for the first time. We will begin our journey here.\"\"\",\n",
+    "            \"question\": \"\"\"Who published A Mathematical Theory of Communication in 1948?\"\"\",\n",
+    "            \"answer\": \"\"\"Claude E. Shannon.\"\"\"\n",
     "        },\n",
     "        {\n",
     "            \"context\": p,\n",
@@ -133,36 +133,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'instruction': 'Generate one question and its corresponding answer based on the context. Following the format of the examples below to include context, question, and answer in the response.',\n",
-       "  'examples': [{'context': 'The quick brown fox jumps over the lazy dog.',\n",
-       "    'question': 'What is the color of the fox?',\n",
-       "    'answer': 'brown.'},\n",
+       "[{'instruction': 'Generate one question and its corresponding answer based on the context. Following the format of the examples below to include the same context, question, and answer in the response.',\n",
+       "  'examples': [{'context': 'In 1948, Claude E. Shannon published A Mathematical Theory of\\nCommunication (Shannon, 1948) establishing the theory of\\ninformation. In his article, Shannon introduced the concept of\\ninformation entropy for the first time. We will begin our journey here.',\n",
+       "    'question': 'Who published A Mathematical Theory of Communication in 1948?',\n",
+       "    'answer': 'Claude E. Shannon.'},\n",
        "   {'context': 'Any notion of information we develop must conform to this intuition.\\nIndeed, in the next sections we will learn how to compute that these\\nevents have \\\\(0\\\\textrm{ bits}\\\\), \\\\(2\\\\textrm{ bits}\\\\),\\n\\\\(~5.7\\\\textrm{ bits}\\\\), and \\\\(~225.6\\\\textrm{ bits}\\\\) of\\ninformation respectively.',\n",
        "    'question': '',\n",
        "    'answer': ''}]},\n",
-       " {'instruction': 'Generate one question and its corresponding answer based on the context. Following the format of the examples below to include context, question, and answer in the response.',\n",
-       "  'examples': [{'context': 'The quick brown fox jumps over the lazy dog.',\n",
-       "    'question': 'What is the color of the fox?',\n",
-       "    'answer': 'brown.'},\n",
+       " {'instruction': 'Generate one question and its corresponding answer based on the context. Following the format of the examples below to include the same context, question, and answer in the response.',\n",
+       "  'examples': [{'context': 'In 1948, Claude E. Shannon published A Mathematical Theory of\\nCommunication (Shannon, 1948) establishing the theory of\\ninformation. In his article, Shannon introduced the concept of\\ninformation entropy for the first time. We will begin our journey here.',\n",
+       "    'question': 'Who published A Mathematical Theory of Communication in 1948?',\n",
+       "    'answer': 'Claude E. Shannon.'},\n",
        "   {'context': 'If we read through these thought experiments, we see a natural idea. As\\na starting point, rather than caring about the knowledge, we may build\\noff the idea that information represents the degree of surprise or the\\nabstract possibility of the event. For example, if we want to describe\\nan unusual event, we need a lot information. For a common event, we may\\nnot need much information.',\n",
        "    'question': '',\n",
        "    'answer': ''}]},\n",
-       " {'instruction': 'Generate one question and its corresponding answer based on the context. Following the format of the examples below to include context, question, and answer in the response.',\n",
-       "  'examples': [{'context': 'The quick brown fox jumps over the lazy dog.',\n",
-       "    'question': 'What is the color of the fox?',\n",
-       "    'answer': 'brown.'},\n",
+       " {'instruction': 'Generate one question and its corresponding answer based on the context. Following the format of the examples below to include the same context, question, and answer in the response.',\n",
+       "  'examples': [{'context': 'In 1948, Claude E. Shannon published A Mathematical Theory of\\nCommunication (Shannon, 1948) establishing the theory of\\ninformation. In his article, Shannon introduced the concept of\\ninformation entropy for the first time. We will begin our journey here.',\n",
+       "    'question': 'Who published A Mathematical Theory of Communication in 1948?',\n",
+       "    'answer': 'Claude E. Shannon.'},\n",
        "   {'context': 'In 1948, Claude E. Shannon published A Mathematical Theory of\\nCommunication (Shannon, 1948) establishing the theory of\\ninformation. In his article, Shannon introduced the concept of\\ninformation entropy for the first time. We will begin our journey here.',\n",
        "    'question': '',\n",
        "    'answer': ''}]}]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,14 +190,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3/3 [00:04<00:00,  1.61s/it]\n"
+      "100%|██████████| 3/3 [00:05<00:00,  1.92s/it]\n"
      ]
     }
    ],
@@ -207,27 +207,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'output': [{'response': [{'context': 'Any notion of information we develop must conform to this intuition. Indeed, in the next sections we will learn how to compute that these events have (0 bits), (2 bits), (~5.7 bits), and (~225.6 bits) of information respectively.',\n",
-       "      'question': 'How much information do these events have?',\n",
-       "      'answer': '(0 bits), (2 bits), (~5.7 bits), and (~225.6 bits) respectively.'}]}],\n",
-       "  'root': <uniflow.node.node.Node at 0x2a8bea860>},\n",
+       "[{'output': [{'response': [{'context': 'Any notion of information we develop must conform to this intuition.\\nIndeed, in the next sections we will learn how to compute that these\\nevents have \\\\(0\\\\textrm{ bits}\\\\), \\\\(2\\\\textrm{ bits}\\\\),\\n\\\\(~5.7\\\\textrm{ bits}\\\\), and \\\\(~225.6\\\\textrm{ bits}\\\\) of\\ninformation respectively.',\n",
+       "      'question': 'What is the amount of information associated with the events mentioned in the next sections?',\n",
+       "      'answer': 'The events have 0 bits, 2 bits, 5.7 bits, and 225.6 bits of information respectively.'},\n",
+       "     {'context': 'Any notion of information we develop must conform to this intuition. Indeed, in the next sections we will learn how to compute that these events have \\\\(0\\\\textrm{ bits}\\\\), \\\\(2\\\\textrm{ bits}\\\\), \\\\(~5.7\\\\textrm{ bits}\\\\), and \\\\(~225.6\\\\textrm{ bits}\\\\) of information respectively.',\n",
+       "      'question': 'What is the amount of information associated with each of the events in the next sections?',\n",
+       "      'answer': 'The events have 0 bits, 2 bits, ~5.7 bits, and ~225.6 bits of information respectively.'},\n",
+       "     {'context': 'Any notion of information we develop must conform to this intuition. Indeed, in the next sections we will learn how to compute that these events have \\\\(0\\\\textrm{ bits}\\\\), \\\\(2\\\\textrm{ bits}\\\\), ~5.7\\\\textrm{ bits}\\\\), and \\\\(~225.6\\\\textrm{ bits}\\\\) of information respectively.',\n",
+       "      'question': 'How much information does each of the events have?',\n",
+       "      'answer': 'The events have 0 bits, 2 bits, 5.7 bits, and 225.6 bits of information respectively.'}],\n",
+       "    'error': 'Failed to deserialize 0 examples'}],\n",
+       "  'root': <uniflow.node.node.Node at 0x29e5f2830>},\n",
        " {'output': [{'response': [{'context': 'If we read through these thought experiments, we see a natural idea. As\\na starting point, rather than caring about the knowledge, we may build\\noff the idea that information represents the degree of surprise or the\\nabstract possibility of the event. For example, if we want to describe\\nan unusual event, we need a lot information. For a common event, we may\\nnot need much information.',\n",
-       "      'question': 'What does the amount of information represent in describing an event?',\n",
-       "      'answer': 'The amount of information represents the degree of surprise or the abstract possibility of the event.'}]}],\n",
-       "  'root': <uniflow.node.node.Node at 0x2a8e04190>},\n",
-       " {'output': [{'response': [{'context': ' In 1948, Claude E. Shannon published A Mathematical Theory of\\nCommunication (Shannon, 1948) establishing the theory of\\ninformation. In his article, Shannon introduced the concept of\\ninformation entropy for the first time. We will begin our journey here.',\n",
-       "      'question': 'Who published A Mathematical Theory of Communication in 1948?',\n",
-       "      'answer': 'Claude E. Shannon.'}]}],\n",
-       "  'root': <uniflow.node.node.Node at 0x2a8bea650>}]"
+       "      'question': 'What does information represent in the context of the thought experiments?',\n",
+       "      'answer': 'The degree of surprise or the abstract possibility of the event.'},\n",
+       "     {'context': 'If we read through these thought experiments, we see a natural idea. As\\na starting point, rather than caring about the knowledge, we may build\\noff the idea that information represents the degree of surprise or the\\nabstract possibility of the event. For example, if we want to describe\\nan unusual event, we need a lot of information. For a common event, we may\\nnot need much information.',\n",
+       "      'question': 'What does information represent in terms of the degree of surprise or abstract possibility of an event?',\n",
+       "      'answer': 'Information represents the degree of surprise or the abstract possibility of an event.'},\n",
+       "     {'context': 'If we read through these thought experiments, we see a natural idea. As\\na starting point, rather than caring about the knowledge, we may build\\noff the idea that information represents the degree of surprise or the\\nabstract possibility of the event. For example, if we want to describe\\nan unusual event, we need a lot information. For a common event, we may\\nnot need much information.',\n",
+       "      'question': 'According to the text, what does information represent in terms of the degree of surprise or possibility of an event?',\n",
+       "      'answer': 'Information represents the degree of surprise or the abstract possibility of the event.'}],\n",
+       "    'error': 'Failed to deserialize 0 examples'}],\n",
+       "  'root': <uniflow.node.node.Node at 0x29e708070>},\n",
+       " {'output': [{'response': [{'context': 'In 1948, Claude E. Shannon published A Mathematical Theory of Communication (Shannon, 1948) establishing the theory of information. In his article, Shannon introduced the concept of information entropy for the first time. We will begin our journey here.',\n",
+       "      'question': 'What concept did Claude E. Shannon introduce for the first time in his article?',\n",
+       "      'answer': 'Information entropy.'},\n",
+       "     {'context': 'In 1948, Claude E. Shannon published A Mathematical Theory of\\nCommunication (Shannon, 1948) establishing the theory of\\ninformation. In his article, Shannon introduced the concept of\\ninformation entropy for the first time. We will begin our journey here.',\n",
+       "      'question': 'What concept did Claude E. Shannon introduce for the first time in his article?',\n",
+       "      'answer': 'Claude E. Shannon introduced the concept of information entropy.'}],\n",
+       "    'error': 'Failed to deserialize 1 examples'}],\n",
+       "  'root': <uniflow.node.node.Node at 0x29e5f2950>}]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -278,20 +296,50 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Any notion of information we develop must conf...</td>\n",
-       "      <td>How much information do these events have?</td>\n",
-       "      <td>(0 bits), (2 bits), (~5.7 bits), and (~225.6 b...</td>\n",
+       "      <td>What is the amount of information associated w...</td>\n",
+       "      <td>The events have 0 bits, 2 bits, 5.7 bits, and ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>If we read through these thought experiments, ...</td>\n",
-       "      <td>What does the amount of information represent ...</td>\n",
-       "      <td>The amount of information represents the degre...</td>\n",
+       "      <td>Any notion of information we develop must conf...</td>\n",
+       "      <td>What is the amount of information associated w...</td>\n",
+       "      <td>The events have 0 bits, 2 bits, ~5.7 bits, and...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>In 1948, Claude E. Shannon published A Mathem...</td>\n",
-       "      <td>Who published A Mathematical Theory of Communi...</td>\n",
-       "      <td>Claude E. Shannon.</td>\n",
+       "      <td>Any notion of information we develop must conf...</td>\n",
+       "      <td>How much information does each of the events h...</td>\n",
+       "      <td>The events have 0 bits, 2 bits, 5.7 bits, and ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>If we read through these thought experiments, ...</td>\n",
+       "      <td>What does information represent in the context...</td>\n",
+       "      <td>The degree of surprise or the abstract possibi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>If we read through these thought experiments, ...</td>\n",
+       "      <td>What does information represent in terms of th...</td>\n",
+       "      <td>Information represents the degree of surprise ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>If we read through these thought experiments, ...</td>\n",
+       "      <td>According to the text, what does information r...</td>\n",
+       "      <td>Information represents the degree of surprise ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>In 1948, Claude E. Shannon published A Mathema...</td>\n",
+       "      <td>What concept did Claude E. Shannon introduce f...</td>\n",
+       "      <td>Information entropy.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>In 1948, Claude E. Shannon published A Mathema...</td>\n",
+       "      <td>What concept did Claude E. Shannon introduce f...</td>\n",
+       "      <td>Claude E. Shannon introduced the concept of in...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -300,21 +348,36 @@
       "text/plain": [
        "                                             context  \\\n",
        "0  Any notion of information we develop must conf...   \n",
-       "1  If we read through these thought experiments, ...   \n",
-       "2   In 1948, Claude E. Shannon published A Mathem...   \n",
+       "1  Any notion of information we develop must conf...   \n",
+       "2  Any notion of information we develop must conf...   \n",
+       "3  If we read through these thought experiments, ...   \n",
+       "4  If we read through these thought experiments, ...   \n",
+       "5  If we read through these thought experiments, ...   \n",
+       "6  In 1948, Claude E. Shannon published A Mathema...   \n",
+       "7  In 1948, Claude E. Shannon published A Mathema...   \n",
        "\n",
        "                                            question  \\\n",
-       "0         How much information do these events have?   \n",
-       "1  What does the amount of information represent ...   \n",
-       "2  Who published A Mathematical Theory of Communi...   \n",
+       "0  What is the amount of information associated w...   \n",
+       "1  What is the amount of information associated w...   \n",
+       "2  How much information does each of the events h...   \n",
+       "3  What does information represent in the context...   \n",
+       "4  What does information represent in terms of th...   \n",
+       "5  According to the text, what does information r...   \n",
+       "6  What concept did Claude E. Shannon introduce f...   \n",
+       "7  What concept did Claude E. Shannon introduce f...   \n",
        "\n",
        "                                              answer  \n",
-       "0  (0 bits), (2 bits), (~5.7 bits), and (~225.6 b...  \n",
-       "1  The amount of information represents the degre...  \n",
-       "2                                 Claude E. Shannon.  "
+       "0  The events have 0 bits, 2 bits, 5.7 bits, and ...  \n",
+       "1  The events have 0 bits, 2 bits, ~5.7 bits, and...  \n",
+       "2  The events have 0 bits, 2 bits, 5.7 bits, and ...  \n",
+       "3  The degree of surprise or the abstract possibi...  \n",
+       "4  Information represents the degree of surprise ...  \n",
+       "5  Information represents the degree of surprise ...  \n",
+       "6                               Information entropy.  \n",
+       "7  Claude E. Shannon introduced the concept of in...  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,8 +401,15 @@
     "    'answer': answers\n",
     "})\n",
     "\n",
-    "df.head()"
+    "df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
